# SequoiaRecover

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: backup.rs  hardware_key.rs  lib.rs  tests.rs  throttle.rs  transfer.rs
core/src/remote/: aws.rs  backblaze.rs  mod.rs
docs/: ROADMAP.md  server.md
gui/: Cargo.toml
gui/src/: main.rs
management-server/: Cargo.toml
management-server/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: backup.rs  compliance.rs  config.rs  gui.rs  hardware_key.rs  lib.rs  main.rs  monitor.rs  remote.rs  server.rs  server_client.rs  tests.rs
src/remote/: azure.rs  mod.rs
tests/: backblaze.rs
ui/: api.rs
