[package]
name = "sequoiarecover"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
zstd = { version = "0.13", features = ["zstdmt"] }
num_cpus = "1"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
backblaze-b2-client = "0.1.5"
tokio = { version = "1", features = ["full"] }
