[package]
name = "sequoiarecover"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_mangen = "0.2"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
zstd = { version = "0.13", features = ["zstdmt"] }
num_cpus = "1"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
backblaze-b2-client = "0.1.5"
tokio = { version = "1", features = ["full"] }
chacha20poly1305 = "0.11.0-rc.0"
pbkdf2 = "0.12"
subtle = "2.6.1"
sha2 = "0.10"
rand = "0.8"
rpassword = "7"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.35"
