[package]
name = "sequoiarecover-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
sequoiarecover = { package = "sequoiarecover-core", path = "../core" }
clap = { version = "4", features = ["derive", "env"] }
clap_mangen = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand = "0.8"
rpassword = "7"
serde_json = "1.0"

[features]
hardware-auth = ["sequoiarecover/hardware-auth"]
